Fix headings and add spacing to the members page

--- a/src/less/grupul-de-initiativa.less
+++ b/src/less/grupul-de-initiativa.less
@@ -5,8 +5,8 @@
         font-size: 14px;
       }
 
-      .tab-content h3 {
-        color: @blue;
+      .wrap {
+        margin-top: 40px;
       }
 
       .membri ul {
@@ -87,6 +87,15 @@
 
     .tab-content {
       padding-left: 15px;
+
+      img {
+        max-width: 100%;
+        margin-top: 80px;
+      }
+
+      h3 {
+        color: @blue;
+      }
     }
   }
 
