--- a/src/less/site.less
+++ b/src/less/site.less
@@ -568,11 +568,17 @@ footer {
 .page-comunicate-de-presa .formular {
   background-color: @blue-dull;
   font-size: 14px;
+}
 
+.comunicate,
+.page-grupul-de-initiativa .formular,
+.page-expunere-de-motive .formular,
+.page-comunicate-de-presa .formular {
   h1 {
     color: @blue;
   }
 }
+
 
 .page-grupul-de-initiativa,
 .page-expunere-de-motive,
@@ -584,8 +590,14 @@ footer {
     }
   }
 
+  h4 {
+    font-size: 14px;
+  }
+
   .formular {
     padding: 30px 0 30px 0;
+
+
 
     input {
       width: 100%;
